deployment/02-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: barber-shop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: harbor-pull-secret
      containers:
        - name: backend
          image: harbor.local/barber-shop/backend:latest
          imagePullPolicy: Always    # <-- set your real tag
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 200m
              memory: 384Mi
            limits:
              cpu: 1
              memory: 768Mi
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: barber-shop
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
